test/arrays/bradc/noelemtype.good
noelemtype.chpl:5: syntax error: near '='
